[gd_scene load_steps=2 format=3 uid="uid://q7h2c6geacs5"]

[ext_resource type="Script" path="res://Assets/Items/Spawnable Items/spawn_calamansi.gd" id="1_efkod"]

[node name="spawn_calamansi" type="Node2D"]
script = ExtResource("1_efkod")

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="spawn_area" type="ReferenceRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0

[node name="calamansi_spawn" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
